Fixed: TinyMCE with WordPress 3.3 would leave an editor at the bottom of the widget page. Fixed: TinyMCE would break on drag and drop of a widget. Added: Made the currently selected spot more obvious when in the spot selector MCE popup.
git-svn-id: https://plugins.svn.wordpress.org/spots/trunk@456303 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/popup.css
+++ b/assets/popup.css
@@ -58,6 +58,11 @@ li.recent {
 	font-weight: bold;
 }
 
+li.current {
+	background-color: #FFFFE0 !important;
+	font-weight:bold;
+}
+
 label {
 	width: 70px;
 	float: left;
